# oxc

./: Cargo.toml  pnpm-lock.yaml
crates/oxc_astro_codegen/: Cargo.toml
crates/oxc_astro_codegen/src/: lib.rs  options.rs  printer.rs  scanner.rs
crates/oxc_astro_codegen/tests/: snapshots.rs
crates/oxc_astro_codegen/tests/integration/: astro.rs  main.rs
crates/oxc_astro_codegen/tests/integration/snapshots/astro/: _955_ternary_slot_with_text.snap  advanced_svg_expression.snap  all_components.snap  anchor_content.snap  anchor_expressions.snap  attribute_with_template_literal.snap  backtick_in_html_comment.snap  basic__no_frontmatter_.snap  caption_only.snap  class_and_class_list_object.snap  class_and_class_list_set.snap  class_and_class_list_simple_array.snap  class_list.snap  class_with_spread.snap  client_only_component__multiple_.snap  client_only_component__named_.snap  comment_only_expressions_are_removed_i.snap  complex_nested_template_literal_expression.snap  complex_table.snap  component_in_expression_with_its_child_expression_before_its_child_element.snap  component_is_raw.snap  component_with_await.snap  component_with_quoted_attributes.snap  condition_expressions_at_the_top-level_with_head_content.snap  conditional_iframe.snap  conditional_noscript.snap  conditional_render.snap  conditional_rendering_of_title_containing_expression.snap  define_vars_on_a_module_script_with_imports.snap  define_vars_on_script_with_staticexpression_turned_on.snap  define_vars_on_style_tag_with_style_quoted_attribute_on_element.snap  division_inside_expression.snap  (+139 more)
(+256 files in other folders)
