[package]
name = "oxc_astro_codegen"
version = "0.112.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
include = ["/src"]
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
doctest = true

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_codegen = { workspace = true }
oxc_data_structures = { workspace = true, features = ["code_buffer"] }
oxc_syntax = { workspace = true }

cow-utils = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["glob"] }
oxc_parser = { workspace = true, features = ["astro"] }
oxc_span = { workspace = true }
